<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical" android:layout_width="match_parent"
android:layout_height="match_parent">



<ListView
    android:id="@+id/listView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

</ListView>


        <Button
            android:id="@+id/send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sendButton"
            android:layout_alignParentBottom="true"/>

    <EditText
        android:id="@+id/messageBox"
        android:layout_width="243dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:layout_toRightOf="@id/send"
        android:text="@string/messageBox" />

        <Button
            android:id="@+id/receive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receiveButton"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@id/messageBox"/>





</RelativeLayout>